--- a/OrthoGroups_analysis/OrthoFinder_results_analysis.ipynb
+++ b/OrthoGroups_analysis/OrthoFinder_results_analysis.ipynb
@@ -17,7 +17,9 @@
     "* Folders in current folder:\n",
     "    * protein/ - folder with Amino Acid FASTA sequences\n",
     "    * annotation/ - folder with annotations\n",
-    "    * genome/ - folder with genomes"
+    "    * genome/ - folder with genomes\n",
+    "    \n",
+    "Group structure for OrthoFinder:\n"
    ]
   },
   {
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 2,
    "id": "97ef6b01",
    "metadata": {},
    "outputs": [],
@@ -60,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 3,
    "id": "34619311",
    "metadata": {},
    "outputs": [],
@@ -126,22 +128,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 5,
    "id": "f8182bbf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-364-9022e7025c52>:30: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  o_ec.loc[ec1_row, ~o_ec.isnull().any(axis=0)] = o_ec.loc[ec1_row, ~o_ec.isnull().any(axis=0)] + \", \" + o_ec.loc[ec2_row, ~o_ec.isnull().any(axis=0)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# All dataframes\n",
     "dfs = []\n",
@@ -151,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 6,
    "id": "76be0a0c",
    "metadata": {},
    "outputs": [],
@@ -164,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 7,
    "id": "d21d6f13",
    "metadata": {
     "scrolled": true
@@ -381,7 +371,7 @@
        " 'KEH21230']"
       ]
      },
-     "execution_count": 367,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 8,
    "id": "16d4652a",
    "metadata": {},
    "outputs": [
@@ -412,7 +402,7 @@
        "206"
       ]
      },
-     "execution_count": 368,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 9,
    "id": "736c8e1e",
    "metadata": {},
    "outputs": [
@@ -502,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 10,
    "id": "a87f6f57",
    "metadata": {},
    "outputs": [],
@@ -555,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 11,
    "id": "51606ac2",
    "metadata": {},
    "outputs": [],
@@ -565,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 12,
    "id": "59e80d29",
    "metadata": {},
    "outputs": [
@@ -575,7 +565,7 @@
        "201"
       ]
      },
-     "execution_count": 372,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 13,
    "id": "8bbd2f58",
    "metadata": {},
    "outputs": [
@@ -596,7 +586,7 @@
        "201"
       ]
      },
-     "execution_count": 373,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 14,
    "id": "9e883618",
    "metadata": {},
    "outputs": [
@@ -633,7 +623,7 @@
        "['MTR_8g099500', 'MTR_3g049180', 'MTR_3g049320', 'MTR_3g095330']"
       ]
      },
-     "execution_count": 374,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 15,
    "id": "403f1de7",
    "metadata": {},
    "outputs": [
@@ -692,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 16,
    "id": "4e20dbda",
    "metadata": {},
    "outputs": [
@@ -731,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 17,
    "id": "fae7f191",
    "metadata": {},
    "outputs": [],
@@ -752,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 18,
    "id": "349e67a5",
    "metadata": {
     "scrolled": true
@@ -778,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 19,
    "id": "950795fa",
    "metadata": {},
    "outputs": [
@@ -878,7 +868,7 @@
        " 'Zm00001eb396810': ['9', 143234903, 143235575, '-']}"
       ]
      },
-     "execution_count": 379,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,10 +887,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 20,
    "id": "19c3686f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mv: cannot stat 'genome/Mdomestica_491_GDDH13v1.1.fa': No such file or directory\r\n"
+     ]
+    }
+   ],
    "source": [
     "!mv genome/Mdomestica_491_GDDH13v1.1.fa genome/Mdomestica_491_v1.1.fa"
    ]
@@ -915,39 +913,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 21,
    "id": "92f078c8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Camelina_sativa.Cs.dna_sm.toplevel.fa\n",
-      "Populus_trichocarpa.Pop_tri_v3.dna_sm.toplevel.fa\n",
-      "Mdomestica_491_v1.1.fa\n",
-      "Zea_mays.Zm-B73-REFERENCE-NAM-5.0.dna_sm.toplevel.fa\n",
-      "Triticum_aestivum.IWGSC.dna_sm.toplevel.fa\n",
-      "Solanum_lycopersicum.SL3.0.dna_sm.toplevel.fa\n",
-      "Brassica_oleracea.BOL.dna_sm.toplevel.fa\n",
-      "Vitis_vinifera.12X.dna_sm.toplevel.fa\n",
-      "Hordeum_vulgare.IBSC_v2.dna_sm.toplevel.fa\n",
-      "Amborella_trichopoda.AMTR1.0.dna_sm.toplevel.fa\n",
-      "Phalaenopsis_equestris.fa\n",
-      "Arabidopsis_thaliana.TAIR10.dna_sm.toplevel.fa\n",
-      "Solanum_tuberosum_rh8903916.ASM1418947v1.dna_sm.toplevel.fa\n",
-      "Oryza_sativa.IRGSP-1.0.dna_sm.toplevel.fa\n",
-      "Actinidia_chinensis.Red5_PS1_1.69.0.dna_sm.toplevel.fa\n",
-      "Nicotiana_attenuata.NIATTr2.dna_sm.toplevel.fa\n",
-      "Medicago_truncatula.MedtrA17_4.0.dna_sm.toplevel.fa\n",
-      "Fvesca_677_v4.0.a1.softmasked.fa\n",
-      "Glycine_max.Glycine_max_v2.1.dna_sm.toplevel.fa\n",
-      "Cannabis_sativa_female.cs10.dna_sm.toplevel.fa\n",
-      "Bdistachyon_314_v3.0.softmasked.fa\n",
-      "Sorghum_bicolor.Sorghum_bicolor_NCBIv3.dna_sm.toplevel.fa\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "upstream_length = 500\n",
     "           \n",
@@ -976,7 +945,7 @@
     "                        fasta_output.write(\">\" + gene + \"\\n\" + str(record.seq[start-upstream_length-1:start-1]) + \"\\n\")\n",
     "                elif strand_direction == \"-\":\n",
     "                    if record.id == contig_id:\n",
-    "                        fasta_output.write(\">\" + gene + \"\\n\" + str(record.seq[end:end + upstream_length].reverse_complement()) + \"\\n\")\n"
+    "                        fasta_output.write(\">\" + gene + \"\\n\" + str(record.seq[end:end + upstream_length].reverse_complement()) + \"\\n\")"
    ]
   },
   {
@@ -991,19 +960,11 @@
     "\n",
     "See folder `../Searching_motifs` for further analysis."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc72ddcb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1017,7 +978,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
