Comment about FASTA files

--- a/Searching_motifs/Motif_sequences.ipynb
+++ b/Searching_motifs/Motif_sequences.ipynb
@@ -6,10 +6,19 @@
    "source": [
     "# MOTIF analysis\n",
     "\n",
-    "We had three resulting files from previous OrthoFinder analysis. We used [Web-Version of FIMO version 5.4.1](https://meme-suite.org/meme/tools/fimo) and core PFMs of plants from [Jaspar 2022](https://jaspar.genereg.net/downloads/). The 3 resulting FIMO files were renamed to `fimo_i.tsv`, where i corresponding to the groups:\n",
+    "We had three resulting files from previous OrthoFinder analysis. The corresponding FASTA files with the amino acid sequences are present in the current folder. \n",
+    "\n",
+    "1. `generative_group1.fasta`\n",
+    "2. `non-specific_group2.fasta`\n",
+    "3. `vegetative_group3.fasta`\n",
+    "\n",
+    "\n",
+    "We used [Web-Version of FIMO version 5.4.1](https://meme-suite.org/meme/tools/fimo) and core PFMs of plants from [Jaspar 2022](https://jaspar.genereg.net/downloads/). The 3 resulting FIMO files were renamed to `fimo_i.tsv`, where i corresponding to the groups:\n",
     "1. Generative\n",
     "2. Non-specific\n",
     "3. Vegetative\n",
+    "\n",
+    "\n",
     "\n",
     "Versions:\n",
     "* Python - 3.8.8\n",
