Minor changes, added trimAl

--- a/Phylogenetic_analysis/Phylogenetic_analysis.ipynb
+++ b/Phylogenetic_analysis/Phylogenetic_analysis.ipynb
@@ -15,6 +15,7 @@
     "* ClustalO - 1.2.3\n",
     "* Ugene - v41\n",
     "* [IQ-Tree v2.0.3](https://anaconda.org/bioconda/iqtree)\n",
+    "* trimAl - v1.4.rev15\n",
     "\n",
     "Coverage is universally bad, but we decided to use ClustalO to build the tree."
    ]
