--- a/Searching_motifs/Motif_sequences.ipynb
+++ b/Searching_motifs/Motif_sequences.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -446,7 +446,7 @@
        "DOF5.8  DOF5.8       12.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -528,7 +528,7 @@
        "CDF5                      CDF5       18.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
        "ZHD10    ZHD10        4.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -776,7 +776,7 @@
        "[595 rows x 3 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -926,7 +926,7 @@
        "37          DOF4.2  0.291667  0.516129"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,16 +939,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Group 1:\n",
-    "\n",
-    "* ZHD9 - Mostly expressed in flowers, stems and inflorescence and, to a lower extent, in leaves and stems. - https://www.uniprot.org/uniprot/Q9LHF0\n",
+    "* ZHD9 - Mostly expressed in flowers, stems and inflorescence and, to a lower extent, in leaves and stems. - https://www.arabidopsis.org/servlets/TairObject?type=locus&name=At3g28920\n",
     "* DOF3.6 - Predominantly expressed in roots. - https://www.uniprot.org/uniprot/Q9M2U1\n",
     "* CDF5 - CDF5 is a circadian regulated transcript that is antiphasic with respect to its natural antisense transcript (NAT) FLORE (AT1G69572).CDF5 transcript accumulation delays flowering. CDF5 links circadian oscillation and photoperiodism.  - https://www.arabidopsis.org/servlets/TairObject?name=AT1G69570&type=locus\n",
     "* DOF5.1 -  adaxial-abaxial polarity, curling of leaves  - https://pubmed.ncbi.nlm.nih.gov/20807212/\n",
     "* DOF5.8 - vein network formation - https://pubmed.ncbi.nlm.nih.gov/25794540/\n",
-    "\n",
-    "Group 2:\n",
-    "\n",
     "* Zm00001d027846 - Was found with chipseq in Leaf protoplast, function unknown..? - https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSM4095466\n",
     "* DOF3.4 - Arabidopsis Dof protein containing a single 51-amino acid zinc finger DNA-binding domain, which may play an important roles in plant growth and development., expressed in leavaes visible stages, embryo stages, vascular leaf senescent stage - https://www.arabidopsis.org/servlets/TairObject?type=locus&name=at3g50410\n",
     "* DOF1 (DOF1.7 and DOF1.5) -  expressed during leaves visible stage, flowering and mature plant embryo stage, petal differentiation and expanion stage, vascular leaf senescent stage - https://www.arabidopsis.org/servlets/TairObject?type=locus&name=At1g51700\n",
@@ -965,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1014,7 @@
        "25  PEND  0.333333  0.032258"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1037,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
