--- a/OrthoGroups_analysis/OrthoFinder_results_analysis.ipynb
+++ b/OrthoGroups_analysis/OrthoFinder_results_analysis.ipynb
@@ -600,7 +600,7 @@
    "id": "df4a9d58",
    "metadata": {},
    "source": [
-    "Here we have 5 less genes, because the *Hordeum vulgare* Ensembl plants release 53 MorexV3 pseudomolecules assembly version amino acid sequence is not included, as its gene IDs could not be converted to transcriptome IDs. Instead, we use the release 52 genome, IBSC v2. "
+    "Here we have 5 less genes, because the *Hordeum vulgare* Ensembl plants release 53 MorexV3 pseudomolecules assembly version amino acid sequence is not included, as its gene IDs could not be converted to transcriptome IDs. Instead, we use the release 51 genome, IBSC v2. "
    ]
   },
   {
@@ -964,7 +964,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -978,7 +978,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
